<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mw_dict_frag_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:text="@string/mw_dict_default_word"/>

    <TextView
        android:id="@+id/mw_dict_frag_syllables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="@string/mw_dict_default_word_syllables"/>

    <TextView
        android:id="@+id/mw_dict_frag_pronunciation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12dp"
        android:text="@string/mw_dict_default_word_pronunciation"/>

    <TextView
        android:id="@+id/mw_dict_frag_word_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:text="@string/mw_dict_default_word_type"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/mw_dict_frag_word_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mw_dict_default_word_definition"
        android:layout_above="@id/MWDictDeleteWordButton"
        android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/MWDictDeleteWordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/mw_dict_delete_prompt"/>
    </RelativeLayout>
</LinearLayout>