<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MWDictMainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mwDictToolbar"
        app:title="@string/mw_dict_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/mwDictWordPromptLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mw_dict_word_prompt" />

    <EditText
        android:id="@+id/mwDictWordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mw_dict_word_hint"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2">
        <Button
            android:id="@+id/mwDictHistoryButton"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="0.5"
            android:text="@string/mw_dict_history_prompt" />
        <Button
            android:id="@+id/mwDictSearchButton"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="0.5"
            android:text="@string/mw_dict_search_prompt" />
    </GridLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/mwDictConnectionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_alignParentBottom="true"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>